trying new tactic with overlay to avoid jumps and backsplash zooms - we will see if this works better or if we have to revert to old styles

--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -120,12 +120,11 @@ img {
   z-index: 11;
   background: #272727;
   opacity: 0.2;
-  overflow-y: scroll;
   visibility: hidden;
   transition: opacity 0.35s, width 0.6s ease, visibility 0.35s; }
 
 .menu-isopen {
-  height: 100vh;
+  height: 100%;
   overflow-y: hidden; }
 
 .menu-overlay.active {
