--- a/client/src/scss/_navbar.scss
+++ b/client/src/scss/_navbar.scss
@@ -71,12 +71,12 @@
 	//background: #cf00a5;
 	background: lighten($primary-bg-color, 1%);
 	opacity: 0.2;
-	overflow-y: scroll;
+	//overflow-y: scroll;
 	visibility: hidden;
 	transition: opacity 0.35s, width 0.6s ease, visibility 0.35s;
 }
 .menu-isopen {
-	height: 100vh;
+	height: 100%;
 	overflow-y: hidden;
 }
 // Navbar overlay menu active status
